--- a/ecommerse_website/src/components/pages/home.css
+++ b/ecommerse_website/src/components/pages/home.css
@@ -4,13 +4,15 @@
     flex-direction: column;
     min-height: 100vh; 
     justify-content: center;
+    
   }
   
   .content {
-    flex: 1; 
+  flex: 1;
     justify-content: space-around;
     padding: 20px;
     margin-bottom: 50px;
-
+    margin-right: 130px;
+  
   }
   
